<resources>
    <string name="app_name">HalitranApp</string>
    <string name="loginHint">login</string>
    <string name="passwordHint">password</string>
    <string name="confirmPasswordHint">confirm password</string>
    <string name="mailHint">mail address</string>
    <string name="nameHint">name</string>
    <string name="lastNameHint">name</string>
    <string name="loginButton">Sign in</string>
    <string name="resetButton">Reset</string>
    <string name="loginActivity"><u>LoginActivity</u></string>
    <string name="getMessageActivity"><u>GetMessageActivity</u></string>
    <string name="createUserTextView"><u>Sign up</u></string>
    <string name="valider">Register</string>
    <string name="annuler">Cancel</string>
    <string name="opendrawer">open drawer</string>
    <string name="closedrawer">open drawer</string>
    <string name="actionsearch">search messages</string>
    <string name="mailaddress">Mail address</string>
    <string name="myaccount">My Account</string>
    <string name="changeaccountparameter">Change my account parameters</string>
    <string name="passwordAccount">Password</string>
    <string name="changepassword">Change your password</string>
    <string name="currentpassword">Current password</string>
    <string name="newpassword">New password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="savechanges">Save changes</string>
    <string name="deletealltweets">Delete all my tweets</string>
    <string name="unsubscribe">Unsubscribe form Halitran</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
