<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/loginHint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/inscription_login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nameHint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/inscription_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/lastNameHint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/inscription_lastName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/mailHint"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/inscription_mail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/passwordHint"
        android:ems="10"
        android:id="@+id/inscription_pwd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/confirmPasswordHint"
        android:ems="10"
        android:id="@+id/inscription_pwd_confirmation" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_valider"
            android:onClick="register"
            android:layout_weight="1" />

        <Button
            android:text="@string/annuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_cancel"
            android:onClick="cancel"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>