<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.patrick.halitranapp.LoginActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginEditText"
        android:hint="@string/loginHint"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createUserTextView"
        android:text="@string/createUserTextView"
        android:onClick="openCreateUserActivity"
        android:fontFamily="sans-serif"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorLink"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="connexion"
            android:text="@string/loginButton"
            android:id="@+id/loginButton"
            android:enabled="false"
            style="@android:style/Widget.Material.Button.Colored" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="resetForm"
            android:text="@string/resetButton"
            android:id="@+id/resetButton"
            android:enabled="false"
            style="@android:style/Widget.Material.Button.Colored" />
    </LinearLayout>




</LinearLayout>
